18.03.beta1
=========
* Support for Private Repos and user supplied ACLs on private images
* GPU Support (courtesy of CSCS)
* Basic metrics on image usage (number of lookups)
* API to view the current work queue and status
* Minor fixes for RPM builds
* Improved image unpacking for some edge cases
* Other bug fixes

16.08.5
==========
* Update slurm integration to update for Slurm CVE-2017-15566
* Properly exit in slurm integration when dlopen() for libslurm.so fails

16.08.3
==========
* Perform volume mount realpath() and lstat() verification with user privileges,
  to ensure user has access to content at container construction time
* Add shifter_realpath() to calculate user volume mount paths relative to
  alternate root (accounts for symlinks that might inadvertently (or
  intentionally) try to pull user volume mounts out of the container.
* Fix buffer overrun in volume map flag parsing code
* Clean up clang & coverity-found issues
* Improve error handling in shifter core logic
* Improve shifter imagegw logging
* Address pylint-found errors (a few minor bugs)

16.08.2
===========
* Fix slurm tests (was missing some build options) and clear up some warnings
* Fix errant xfs dependency in tests
* Force user-level sshd to get group identities from external environment
* Add additional checks to ensure bind mounts stay within approved paths and
  validate that mount points are directories better

16.08.1
===========
* Fixed bug in user volume mount flag parsing that could segfault
* Fixed bug that could cause group file filtration to assign incorrect gid,
  potentially security issue if sshd_config was modified away from shifter
  defaults
* Fixed bug that caused PATH to be searched incorrectly
* Fixed issue with user volume mounts able to traverse relative paths
  inappropriately
* Fixed bug that confused SHIFTER_VOLUME environment variable with shifter
  command line arguments
* Performance and functionality improvements in docker image conversion