@@ -551,7 +551,8 @@ static void _usage(int status) {
     printf("\n"
         "Usage:\n"
         "shifter [-h|--help] [-v|--verbose] [--image=<imageType>:<imageTag>]\n"
-        "    [--entry] [-V|--volume=/path/to/bind:/mnt/in/image[:<flags>][,...]][;...]\n"
+        "    [--entry] [--workdir]  \n"
+        "    [-V|--volume=/path/to/bind:/mnt/in/image[:<flags>][,...]][;...]\n"
         "    [-- /command/to/exec/in/shifter [args...]]\n"
         );
     printf("\n");
@@ -571,8 +572,15 @@ static void _usage(int status) {
 "Command Selection: If a command is supplied on the command line Shifter will\n"
 "attempt to exec that command within the image.  Otherwise, if \"--entry\" is\n"
 "specified and an entry point is defined for the image, then the entrypoint\n"
-"will be executed.  Finally if nothing else is specified /bin/sh will be\n"
-"attempted.\n"
+"will be executed.  This includes handling of any command options specified\n"
+"in the image as well.  If commands are specified in the command-line, these\n"
+"will override the commands specified in the image.  Finally if nothing else\n"
+"is specified $SHELL or /bin/sh will be attempted.\n"
+"\n"
+"If \"--workdir\" is specified, the working directory will change to the specified\n"
+"directory.  If no directory is specified, the working directory specified in\n"
+"the image will be used.  The default behaviour is to use the current working\n"
+"directory\n"
 "\n"
 "Environmental Transfer: All the environment variables defined in the\n"
 "calling processes's environment will be transferred into the container,\n"
