@@ -2,10 +2,13 @@
 =========
 * Support for Private Repos and user supplied ACLs on private images
 * GPU Support (courtesy of CSCS)
+* Improved handling of entrypoint, command, and working directory to be more
+  compliant with docker.
 * Basic metrics on image usage (number of lookups)
 * API to view the current work queue and status
 * Minor fixes for RPM builds
 * Improved image unpacking for some edge cases
+* Dropped celery dependency to simplify installation
 * Other bug fixes
 
 16.08.5
